my-service-eval.yml
apiVersion: v1
kind: Service
metadata:
  name: raph-kub-exam-service
  labels:
    app: raph-kub-exam-api
spec:
    type: NodePort
    selector:
      app: raph-kub-exam-api
    ports:
      - name: http
        protocol: TCP
        port: 80
        targetPort: 80
        nodePort: 32767
